--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,7 @@
         <link rel="stylesheet" type="text/css" href="/css/dropdown.css" />
         <link rel="stylesheet" type="text/css" href="/css/drawer.css?v=0.7.0" />
         <link rel="stylesheet" type="text/css" href="/bower_components/tipsy-jmalonzo/src/stylesheets/tipsy.css" />
+        <link rel="stylesheet" type="text/css" href="/bower_components/jquery-ui/themes/ui-darkness/jquery-ui.min.css">    
     </head>
     <body>
         <div class="container loading" id="container">
@@ -37,6 +38,7 @@
                     <a id="testAlarms" class="tip" original-title="Alarm Test / Smartphone Enable" href="#"><i class="icon-volume"></i></a>
                     <a id="drawerToggle" class="tip" original-title="Settings" href="#"><i class="icon-cog"></i></a>
                     <a id="treatmentDrawerToggle" class="tip" original-title="Treatments" href="#"><i class="icon-plus"></i></a>
+                    <a id="boluscalcDrawerToggle" class="tip" original-title="Bolus Wizard" href="#"><i class="icon-calc"></i></a>
                 </div>
                 <div class="customTitle">Nightscout</div>
             </div>
@@ -252,6 +254,268 @@
             </form>
         </div>
 
+       <div id="boluscalcDrawer">
+			<form id="boluscalc-form">
+                <fieldset class="boluscalcData">
+                    <legend>
+						<span class="translate">Bolus Wizard</span>
+						(<span id="bc_units"></span>)
+					</legend>
+					<table>
+						<tr>
+							<td>
+							</td>
+							<td>
+								<span class="translate">BG</span>:
+								<span style="float:right;">
+									<input type="text" size="3" id="bc_bg" class="insulincalculationpart">
+								</span>
+							</td>
+							<td>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input title="Use BG correction in calculation" type="checkbox" id="bc_usebg" class="insulincalculationpart titletranslate" checked>
+							</td>
+							<td style="width:170px">
+								<input type="radio" name="bc_bginput" id="bc_bgfromsensor" checked>
+								<i title="BG from CGM (autoupdated)" class="icon-chart-line titletranslate" style="margin-right:0;margin-left:-0.6em;color:lightgreen"></i>
+								<input type="radio" name="bc_bginput" id="bc_bgfrommeter">
+								<i title="BG from meter" class="icon-tint titletranslate" style="margin-right:0;margin-left:-0.6em;color:red"></i>
+								<input type="radio" name="bc_bginput" id="bc_bgmanual">
+								<i title="Manual BG" class="icon-sort-numeric titletranslate" style="margin-right:0;margin-left:-0.6em;color:blue"></i>
+							</td>
+							<td id="bc_inzulinbgtd" class="insulincalculation">
+								<span style="float:right" id="bc_inzulinbg">0.00</span>
+							</td>
+						</tr>
+						<tr class="foodinput">
+							<td colspan="3" id="bc_gitd">
+								<span class="translate">GI</span>:
+								<select style="float:right;" id="bc_gi">
+									<option class="translate" value="1">Low</option>
+									<option class="translate" value="2" selected>Medium/Unknown</option>
+									<option class="translate" value="3">High</option>
+								</select>
+								<span style="float:right;" id="bc_gicalculated" style="display:none"></span>
+							</td>
+						</tr>
+						<tr class="foodinput">
+							<td colspan="3">
+								<span class="translate">Quickpick</span>: <select style="float:right;" id="bc_quickpick"></select>
+								<br>
+								<span class="translate">or</span> <a href="#" style="float:right;" id="bc_addfromdatabase"><span class="translate">Add from database<span class="translate"></a>
+								<div id="bc_food"></div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input title="Use carbs correction in calculation" type="checkbox" id="bc_usecarbs" class="insulincalculationpart titletranslate" checked>
+							</td>
+							<td>
+								<span class="translate">Carbs</span>:
+								<span style="float:right;">
+									<input type="text" size="3" id="bc_carbs" value="0" class="insulincalculationpart"> g
+								</span>
+							</td>
+							<td id="bc_inzulincarbstd" class="insulincalculation">
+								<span style="float:right" id="bc_inzulincarbs"></span>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input title="Use COB correction in calculation" type="checkbox" id="bc_usecob" class="insulincalculationpart titletranslate">
+							</td>
+							<td>
+								<span class="translate">COB</span>:
+								<span style="float:right">
+									<span id="bc_cob"></span> g
+								</span>
+							</td>
+							<td class="insulincalculation">
+									<span style="float:right" id="bc_cobu"></span>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input title="Use IOB in calculation" type="checkbox" id="bc_useiob" class="insulincalculationpart" checked>
+							</td>
+							<td>
+								<span class="translate">IOB</span>:
+							</td>
+							<td class="insulincalculation">
+								<span style="float:right" id="bc_iob">0.00</span>
+							</td>
+						</tr>
+						<tr>
+							<td>
+							</td>
+							<td>
+								<span class="translate">Other correction</span>:
+							</td>
+							<td class="insulincalculation">
+								<select style="float:right" id="bc_othercorrection" class="insulincalculationpart">
+									<option value="-1">-1.00</option>
+									<option value="-0.95">-0.95</option>
+									<option value="-0.90">-0.90</option>
+									<option value="-0.85">-0.85</option>
+									<option value="-0.80">-0.80</option>
+									<option value="-0.75">-0.75</option>
+									<option value="-0.70">-0.70</option>
+									<option value="-0.65">-0.65</option>
+									<option value="-0.60">-0.60</option>
+									<option value="-0.55">-0.55</option>
+									<option value="-0.50">-0.50</option>
+									<option value="-0.45">-0.45</option>
+									<option value="-0.40">-0.40</option>
+									<option value="-0.35">-0.35</option>
+									<option value="-0.30">-0.30</option>
+									<option value="-0.25">-0.25</option>
+									<option value="-0.20">-0.20</option>
+									<option value="-0.15">-0.15</option>
+									<option value="-0.10">-0.10</option>
+									<option value="-0.05">-0.05</option>
+									<option value="0" selected>0.00</option>
+									<option value="0.05">0.05</option>
+									<option value="0.10">0.10</option>
+									<option value="0.15">0.15</option>
+									<option value="0.20">0.20</option>
+									<option value="0.25">0.25</option>
+									<option value="0.30">0.30</option>
+									<option value="0.35">0.35</option>
+									<option value="0.40">0.40</option>
+									<option value="0.45">0.45</option>
+									<option value="0.50">0.50</option>
+									<option value="0.55">0.55</option>
+									<option value="0.60">0.60</option>
+									<option value="0.65">0.65</option>
+									<option value="0.70">0.70</option>
+									<option value="0.75">0.75</option>
+									<option value="0.80">0.80</option>
+									<option value="0.85">0.85</option>
+									<option value="0.90">0.90</option>
+									<option value="0.95">0.95</option>
+									<option value="1">1.00</option>
+								</select>
+							</td>
+						</tr>
+						<tr class="border_bottom">
+							<td>
+							</td>
+							<td>
+								<span class="translate">Rounding</span>:
+							</td>
+							<td class="insulincalculation">
+								<span style="float:right" id="bc_rouding">0.00</span>
+							</td>
+						</tr>
+						<tr  id="bc_insulinneededtr" class="insulintotalcalculation border_bottom">
+							<td>
+								<input title="Enter insulin correction in treatment" type="checkbox" id="bc_useinsulin" class="insulincalculationpart titletranslate" checked>
+							</td>
+							<td>
+								<span class="translate">Insulin needed</span>:
+							</td>
+							<td>
+								<span style="float:right" id="bc_insulintotal">0.00</span>
+							</td>
+						</tr>
+						<tr  id="bc_carbsneededtr" class="insulintotalcalculation border_bottom titletranslate" title="Carbs needed if Insulin total is negative value">
+							<td>
+							</td>
+							<td>
+								<span class="translate">Carbs needed</span>:
+								<span style="float:right" id="bc_carbsneeded"></span>
+							</td>
+							<td>
+								<span  style="float:right"id="bc_insulinover"></span>
+							</td>
+						</tr>
+						<tr class="border_bottom">
+							<td>
+							</td>
+							<td>
+								<span class="translate">Basal rate</span>:
+							</td>
+							<td>
+								<span id="bc_basal" style="float:right"></span>
+							</td>
+						</tr>
+					</table>
+					<hr>
+                     <label for="bc_preBolus" class="left-column short-label extra-space">
+                        <span class="translate">Eating</span>:
+                        <select id="bc_preBolus">
+                            <option class="translate" value="-60">60 minutes before</option>
+                            <option class="translate" value="-45">45 minutes before</option>
+                            <option class="translate" value="-30">30 minutes before</option>
+                            <option class="translate" value="-20">20 minutes before</option>
+                            <option class="translate" value="-15">15 minutes before</option>
+                            <option class="translate" value="0" selected>Time in minutes</option>
+                            <option class="translate" value="15">15 minutes after</option>
+                            <option class="translate" value="20">20 minutes after</option>
+                            <option class="translate" value="30">30 minutes after</option>
+                            <option class="translate" value="45">45 minutes after</option>
+                            <option class="translate" value="60">60 minutes after</option>
+                        </select>
+                    </label>
+					<br>
+
+                    <!-- Label and textarea -->
+                    <label for="bc_notes" class="extra-space translate">Additional Notes, Comments:</label>
+                    <textarea id="bc_notes" style="width:250px"></textarea><br>
+
+                    <label for="bc_enteredBy" class="left-column extra-space">
+                      <span class="translate">Entered By</span>:
+                      <input type="text" id="bc_enteredBy" value="" />
+                    </label>
+
+                    <div id="bc_eventTime">
+                      <span class="translate">Event Time</span>:
+                      <label for="bc_nowtime">
+                        <input type="radio" name="bc_nowOrOther" id="bc_nowtime" value="now" checked="checked"/>
+                        <span class="translate">Now</span>
+                      </label>
+                      <label for="bc_othertime">
+                        <input type="radio" name="bc_nowOrOther" id="bc_othertime" value="other"/>
+                        <span class="translate">Other</span>
+                      </label>
+                      <input type="date" id="bc_eventDateValue" name="bc_eventTimeValue" value="" class="bc_eventtimeinput"/>
+                      <input type="time" id="bc_eventTimeValue" name="bc_eventTimeValue" value="" class="bc_eventtimeinput"/>
+                    </div>
+					<div id="bc_retro" class="translate" style="display:none;width:100%;background-color:red;text-align: center;border: 2px solid black;border-radius: 10px;margin-top:10px;">RETRO MODE</div>
+               </fieldset>
+				<button id="bc_submit" type="submit" class="translate">Submit Form</button>
+				<br>
+				<br>
+                <a href="/treatments.html" target="_blank"><span class="translate">View all treatments</span></a>
+				<br>
+                <a href="/profile/" target="_blank"><span class="translate">Profile editor</span></a>
+				<br>
+                <a href="/food/" target="_blank"><span class="translate">Food editor</span></a>
+				<br>
+                <a href="/report/" target="_blank"><span class="translate">Reporting tool</span></a>
+				<br>
+				<b><span class="translate">Authentication status</span>: </b>
+				<br>
+				<span id="authentication_placeholder"></span>
+            </form>
+        </div>
+		
+		<div id="bc_addfooddialog" style="display:none" title="Add food from your database" class="titletranslate">
+			<fieldset class="browserSettings">
+				<legend class="translate">Filter</legend>
+				<span class="translate">Category</span>: <select id="bc_filter_category"></select>
+				<span class="translate">Subcategory</span>: <select id="bc_filter_subcategory"></select>
+				<br>
+				<span class="translate">Name</span>: <input type="text" id="bc_filter_name"></select>
+			</fieldset>
+			<select id="bc_data" style="width:100%;"></select>
+			<br><br>
+			<span class="translate">Portions</span>: <input type="number" step="0.1" min="0" value="1" size="3" id="bc_addportions">
+		</div>
+
         <div class="audio alarms">
             <audio src="/audio/alarm.mp3" preload="auto" loop="true" class="alarm mp3" type="audio/mp3"></audio>
             <audio src="/audio/alarm2.mp3" preload="auto" loop="true" class="urgent alarm2 mp3" type="audio/mp3"></audio>
@@ -263,8 +527,11 @@
         <script src="/bower_components/d3/d3.min.js"></script>
         <script src="/bower_components/jQuery-Storage-API/jquery.storageapi.min.js"></script>
         <script src="/bower_components/tipsy-jmalonzo/src/javascripts/jquery.tipsy.js"></script>
+        <script src="/bower_components/jquery-ui/jquery-ui.min.js"></script>
+        <script src="/bower_components/jsSHA/src/sha1.js"></script>
         <script src="/js/ui-utils.js?v=0.7.0"></script>
         <script src="/js/treatment.js"></script>
         <script src="/js/client.js?v=0.7.0"></script>
+        <script src="/js/hashauth/hashauth.js"></script>
     </body>
 </html>
