work on profile editor and reports

--- a/static/index.html
+++ b/static/index.html
@@ -445,25 +445,25 @@
 					</table>
 					<hr>
                      <label for="bc_preBolus" class="left-column short-label extra-space">
-                        <span class="translate">Eating</span>:
+                        <span class="translate">Carb Time</span>:
                         <select id="bc_preBolus">
-                            <option class="translate" value="-60">60 minutes before</option>
-                            <option class="translate" value="-45">45 minutes before</option>
-                            <option class="translate" value="-30">30 minutes before</option>
-                            <option class="translate" value="-20">20 minutes before</option>
-                            <option class="translate" value="-15">15 minutes before</option>
+                            <option class="translate" value="-60">60 minutes earlier</option>
+                            <option class="translate" value="-45">45 minutes earlier</option>
+                            <option class="translate" value="-30">30 minutes earlier</option>
+                            <option class="translate" value="-20">20 minutes earlier</option>
+                            <option class="translate" value="-15">15 minutes earlier</option>
                             <option class="translate" value="0" selected>Time in minutes</option>
-                            <option class="translate" value="15">15 minutes after</option>
-                            <option class="translate" value="20">20 minutes after</option>
-                            <option class="translate" value="30">30 minutes after</option>
-                            <option class="translate" value="45">45 minutes after</option>
-                            <option class="translate" value="60">60 minutes after</option>
+                            <option class="translate" value="15">15 minutes later</option>
+                            <option class="translate" value="20">20 minutes later</option>
+                            <option class="translate" value="30">30 minutes later</option>
+                            <option class="translate" value="45">45 minutes later</option>
+                            <option class="translate" value="60">60 minutes later</option>
                         </select>
                     </label>
 					<br>
 
                     <!-- Label and textarea -->
-                    <label for="bc_notes" class="extra-space translate">Additional Notes, Comments:</label>
+                    <label for="bc_notes" class="extra-space translate">Additional Notes, Comments</label>
                     <textarea id="bc_notes" style="width:250px"></textarea><br>
 
                     <label for="bc_enteredBy" class="left-column extra-space">
@@ -532,6 +532,6 @@
         <script src="/js/ui-utils.js?v=0.7.0"></script>
         <script src="/js/treatment.js"></script>
         <script src="/js/client.js?v=0.7.0"></script>
-        <script src="/js/hashauth/hashauth.js"></script>
+        <script src="/hashauth/js/hashauth.js"></script>
     </body>
 </html>
